# pi_bot

./: CMakeLists.txt  Dockerfile  README
src/: CMakeLists.txt  main.cpp
src/httpconnection/: CMakeLists.txt
src/httpconnection/inc/: httpconnection.h
src/httpconnection/src/: httpconnection.cpp
src/lib/AdafruitGFX/: Adafruit_GFX.cpp  Adafruit_GFX.h  CMakeLists.txt
src/lib/BMPReader/: BMPReader.cpp  BMPReader.h  CMakeLists.txt
src/lib/drivers/: Adafruit_IL19341.cpp  Adafruit_IL19341.h  CMakeLists.txt  PiWiringSPIDriver.cpp  PiWiringSPIDriver.h
